--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -19,7 +19,7 @@ jobs:
             serverchan_key: SERVERCHAN_KEY
     steps:
       - name: Working
-        uses: gitkeniwo/ZJU-Hitcarder-New
+        uses: gitkeniwo/ZJU-Hitcarder-New@main
         with:
           username: ${{ secrets[matrix.username] }}
           password: ${{ secrets[matrix.password] }}
